Subdivision Surface Type Simple messes up UVs #58227

Closed
opened 2018-11-29 23:24:55 +01:00 by Alexander Otto · 9 comments

System Information
Operating system: Windows 10 x64
Graphics card: Nvidia 980

Blender Version
Broken: 2018-11-29 15:57, 26d5a3625e, blender2.8

Short description of error
Subdivision Surface Modifier with Type Simple messes up UVs

Exact steps for others to reproduce the error
Adding the Subdivision Surface Modifier to a mesh and setting it on Simple destroys the UVs. Worked on older 2.8 versions without the Subdivisions Quality setting. uvs.PNG

**System Information** Operating system: Windows 10 x64 Graphics card: Nvidia 980 **Blender Version** Broken: 2018-11-29 15:57, 26d5a3625ed, blender2.8 **Short description of error** Subdivision Surface Modifier with Type Simple messes up UVs **Exact steps for others to reproduce the error** Adding the Subdivision Surface Modifier to a mesh and setting it on Simple destroys the UVs. Worked on older 2.8 versions without the Subdivisions Quality setting. ![uvs.PNG](https://archive.blender.org/developer/F5760495/uvs.PNG)
Author

Added subscriber: @AlexanderOtto

Added subscriber: @AlexanderOtto

#58611 was marked as duplicate of this issue

#58611 was marked as duplicate of this issue

#58526 was marked as duplicate of this issue

#58526 was marked as duplicate of this issue

#58457 was marked as duplicate of this issue

#58457 was marked as duplicate of this issue

Added subscriber: @MrJoMo

Added subscriber: @MrJoMo

Added subscriber: @spiegelball

Added subscriber: @spiegelball
Sergey Sharybin was assigned by Brecht Van Lommel 2018-12-03 13:59:48 +01:00

Added subscribers: @solartistic, @Sergey, @JacquesLucke

Added subscribers: @solartistic, @Sergey, @JacquesLucke

This issue was referenced by e666ee965c

This issue was referenced by e666ee965c63322531fba5203905e7d9ca567ed3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58227
No description provided.