source/blender/blenkernel/intern/multires_subdiv.c
@@ -46,8 +46,8 @@ void BKE_multires_subdiv_settings_init(
         const MultiresModifierData *mmd)
 {
 	settings->is_simple = (mmd->simple != 0);
-	settings->is_adaptive = !settings->is_simple;
-	settings->level = mmd->quality;
+	settings->is_adaptive = true;
+	settings->level = settings->is_simple ? 1 : mmd->quality;
 	settings->vtx_boundary_interpolation = SUBDIV_VTX_BOUNDARY_EDGE_ONLY;
 	settings->fvar_linear_interpolation =
 	        BKE_subdiv_fvar_interpolation_from_uv_smooth(mmd->uv_smooth);
