source/blender/modifiers/intern/MOD_subsurf.c
@@ -115,8 +115,8 @@ static void subdiv_settings_init(SubdivSettings *settings,
                                  const SubsurfModifierData *smd)
 {
 	settings->is_simple = (smd->subdivType == SUBSURF_TYPE_SIMPLE);
-	settings->is_adaptive = !settings->is_simple;
-	settings->level = smd->quality;
+	settings->is_adaptive = true;
+	settings->level = settings->is_simple ? 1 : smd->quality;
 	settings->vtx_boundary_interpolation = SUBDIV_VTX_BOUNDARY_EDGE_ONLY;
 	settings->fvar_linear_interpolation =
 	        BKE_subdiv_fvar_interpolation_from_uv_smooth(smd->uv_smooth);
